style+fix: fixed landing text on mobile + updated class names

--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -3,7 +3,7 @@
 .social-item-container {
   display: flex;
   flex-direction: column;
-  margin: 0 0 1.25rem 0;
+  margin: 0 .5rem 1.25rem .5rem;
   max-width: 124px;
 
   .icon-container {
