--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -1,6 +1,6 @@
 @import "../../variables.scss";
 
-.about {
+.section-about {
   .about-container {
     margin: 0;
 
