--- a/src/sections/contact/contact.scss
+++ b/src/sections/contact/contact.scss
@@ -58,6 +58,7 @@
         padding: 0.75rem;
         font-size: 1.15rem;
         transition: 0.25s all ease-in-out;
+        cursor: pointer;
 
         &:hover {
           background-color: white;
